--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -23,7 +23,7 @@
                 <img class="thumbnail" src="{{product.imageURL}}">
                 <div class="box-element product">
                     <h6><strong>{{product.name}}</strong></h6> <hr>
-                    <p style="float: left"><strong>{{product.price|floatformat:2}}</strong></p>
+                    <p style="float: left"><strong>THB. {{product.price|floatformat:2}}</strong></p>
                     <br>
                 </div>
             </div>
